fixing the button lang on mobile vers

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -555,7 +555,7 @@ body.light .contacts-modern__glow {
 }
 
 .burger.open span:nth-child(1) {
-	transform: rotate(45deg) translate(5px, 5px);
+	transform: rotate(50deg) translate(6px, 5px);
 }
 
 .burger.open span:nth-child(2) {
@@ -906,6 +906,8 @@ button[type="submit"] {
 	.burger {
 		display: flex;
 		z-index: 10001;
+		position: relative;
+		top: 26px;
 	}
 
 	.nav-list {
@@ -949,8 +951,8 @@ button[type="submit"] {
 	}
 
 	.lang-wrapper {
-		top: -56dvh;
-		left: -23dvh;
+		top: -54dvh;
+		left: -21dvh;
 	}
 
 	.dropdown-content {
@@ -1038,7 +1040,7 @@ button[type="submit"] {
 
 }
 
-@media screen and (max-width: 400px) and (max-height: 850px) and (orientation: portrait) {
+/* @media screen and (max-width: 400px) and (max-height: 850px) and (orientation: portrait) {
 	.lang-wrapper {
 		top: -478px;
 		left: -181px;
@@ -1057,4 +1059,4 @@ button[type="submit"] {
 		top: -393px;
 		left: -158px;
 	}
-}
+} */
